youtube fullscreen scrollbar fix #235

--- a/css/custom/youtube.css
+++ b/css/custom/youtube.css
@@ -213,7 +213,7 @@ html[ml-stage]:not([ml-mode="filter"]) .ytp-ad-overlay-container {
   filter: var(--ml-image-filter);
 }
 
-html[ml-stage][ml-scrollbar-style="ml-simple"]:not([hide-scrollbar="true"]) {
+html[ml-stage][ml-scrollbar-style="ml-simple"]:not([hide-scrollbar="true"]):not(:fullscreen) {
   overflow: auto;
 }
 
